--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -17,7 +17,7 @@ jobs:
           fetch-depth: 0
 
       - name: Login
-        run: docker login ghcr.io -u ggos3 --password-stdin ${{secrets.PASSWORD}
+        run: docker login ghcr.io -u ggos3 --password-stdin ${{ secrets.PASSWORD }}
 
       - name: build
         run: docker build .
