액션 로그인 수정

--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Login
         run: \
-          token = ${{ secrets.PASSWORD }}
+          token = ${{ secrets.PASSWORD }} \
           echo $token | docker login ghcr.io -u ggos3 password-stdin
 
       - name: build
