--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -16,10 +16,22 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Login
-        run: \
-          token = ${{ secrets.PASSWORD }} \
-          echo $token | docker login ghcr.io -u ggos3 password-stdin
+      - name: Login to Github Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        id : docker_build
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            ghrc.io/${{ github.repository_owner }}/test:latest
 
       - name: build
         run: docker build .
