--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -31,11 +31,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghrc.io/${{ github.repository_owner }}/test:latest
-
-      - name: build
-        run: docker build .
-
-      - name: push
-        run: docker push ghrc.io/ggos3/test:latest
-
+            ghrc.io/ggos3/test:latest
