--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -20,15 +20,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ggos3
+          username: ${{ github.actor }}
           password: ${{ secrets.PASSWORD }}
 
       - name: Build and push
-        uses: docker/build-push-action@v4
-        id : docker_build
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            ghrc.io/ggos3/test:latest
+        run : docker push ghcr.io/${{ github.actor }}/test:latest
