--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -50,9 +50,4 @@ jobs:
 
       - name: Run Docker Image
         run: |
-          docker run 
-          -e DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }}
-          -e TEST_DISCORD_TOKEN=${{ secrets.TEST_DISCORD_TOKEN}}
-          -e NIES_KEY=${{ secrets.NIES_KEY }}
-          -e TEST_APPLICATION_ID=${{ secrets.TEST_APPLICATION_ID }} 
-          -t hanseifood ${{ secrets.DOCKERHUB_USERNAME }}/hanseifood:latest
+          docker run -e DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }} -e TEST_DISCORD_TOKEN=${{ secrets.TEST_DISCORD_TOKEN}} -e NIES_KEY=${{ secrets.NIES_KEY }} -e TEST_APPLICATION_ID=${{ secrets.TEST_APPLICATION_ID }} -t hanseifood ${{ secrets.DOCKERHUB_USERNAME }}/hanseifood:latest
