--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -50,3 +50,4 @@ jobs:
             docker rm hanseifood
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/hanseifood:latest
             docker run -d -e DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }} -e TEST_DISCORD_TOKEN=${{ secrets.TEST_DISCORD_TOKEN}} -e NIES_KEY=${{ secrets.NIES_KEY }} -e TEST_APPLICATION_ID=${{ secrets.TEST_APPLICATION_ID }} --name hanseifood ${{ secrets.DOCKERHUB_USERNAME }}/hanseifood:latest
+            docker cp /home/ubuntu/HanseiFood/savedschools.json hanseifood:/DockerHanseiFood/
